--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
   border: 2px solid #5E1B89;
   box-sizing: border-box;
   background-color: #f8fffe;
-  color: #5E1B89;
+  color: grey; /* Change text color to grey */
   box-shadow: none;
 }
 
@@ -80,7 +80,7 @@
   border: 2px solid #5E1B89; /* Default border color */
   box-sizing: border-box;
   background-color: #f8fffe;
-  color: #5E1B89;
+  color: grey; /* Change text color to grey */
   box-shadow: none; /* Ensure no shadow is applied */
   margin-bottom: 5px;
 }
@@ -100,7 +100,7 @@
   border: 2px solid #5E1B89;
   box-sizing: border-box;
   background-color: #f8fffe;
-  color: #5E1B89;
+  color: grey; /* Change text color to grey */
 }
 
 /* Date and Time Picker Styling */
@@ -230,6 +230,7 @@
   border-radius: 5px;
   box-sizing: border-box;
   margin-top: 8px;
+  color: grey; /* Change text color to grey */
 }
 
 /* Task Details Styling */
@@ -331,4 +332,3 @@
     margin-bottom: 10px;
   }
 }
-
